# portal-atividades

./: LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml
portal/: Taskfile.yaml  envs.py  settings_martor.py
portal/atv/: __init__.py  admin.py  apps.py  urls.py
portal/atv/forms/: auth.py  subscribe_form.py  validators.py
portal/atv/migrations/: 0001_initial.py  0002_auto_20230129_1045.py  0003_remove_escotista_email_escotista_scout_group.py  0004_alter_escotista_user.py  0005_escotista_subscribe_date.py  0006_atividade_creation_date.py  0007_atividade_tipo.py  0008_alter_atividade_editor.py
portal/atv/models/: associacao.py  atividade.py  enum_enfase.py  enum_ramo.py  enum_tipo_atividade.py  escotista.py  grupo_escoteiro.py
portal/atv/services/: auth_provider.py  auth_providers.py  auth_service.py  comunidade_service.py  mappa_auth_provider.py
portal/atv/services/mappa/: mappa_api.py  mappa_models.py
portal/atv/templates/: base.html  colors  comunidade.html  home.html  lgpd.html
portal/atv/templates/auth/: login.html  subscribe_form.html  subscribed_form.html
portal/atv/templates/bootstrap/: base.html  subscribe_form.html
portal/atv/templates/semantic/: base.html  form.html  test_markdownify.html
portal/atv/tests/services/mappa/: test_mappa_api.py
portal/atv/tests/utils/: test_url.py
portal/atv/utils/: url.py
portal/atv/views/: __init__.py  auth.py  comunidade.py  home.py  lgpd.py  subscribe_form_view.py
portal/portal/: settings.py  urls.py
